gitops/nonprod/overlays/dev/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vacman-frontend
  labels:
    app.kubernetes.io/name: vacman-frontend
spec:
  ingressClassName: nginx
  rules:
    - host: vacman-dev.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vacman-frontend
                port:
                  name: http
    - host: vacman-dev-api.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vacman-backend
                port:
                  name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vacman-backend
  labels:
    app.kubernetes.io/name: vacman-backend
spec:
  ingressClassName: nginx
  rules:
    - host: vacman-dev-api.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vacman-backend
                port:
                  name: http
